fix(tabs): Fixing Header/Sub-header tabs that were too high - SPARK-29316

--- a/core/scss/components/tabs.scss
+++ b/core/scss/components/tabs.scss
@@ -321,6 +321,8 @@
 
     .cui-tab__list {
       margin-bottom: 0;
+      position: relative;
+      top: 1px;
     }
 
     .#{$cui}-tab__item > a {
